# vrperfkit

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dllmain.cpp  index.md  vrperfkit.yml
docs/: Gemfile  _config.yml  config.md  index.md  install.md
docs/_layouts/: default.html
resources/: exports.def
src/: .clang-format  config.cpp  config.h  dllmain.cpp  graphics_apis.h  hooks.cpp  hooks.h  hotkeys.cpp  hotkeys.h  logging.cpp  logging.h  post_processor.cpp  post_processor.h  resolution_scaling.h  types.h  win_header_sane.h
src/cas/: cas.compute.h  cas.sharpen.hlsl
src/d3d11/: d3d11_cas_upscaler.cpp  d3d11_cas_upscaler.h  d3d11_fsr_upscaler.cpp  d3d11_fsr_upscaler.h  d3d11_helper.cpp  d3d11_helper.h  d3d11_injector.cpp  d3d11_injector.h  d3d11_nis_upscaler.cpp  d3d11_nis_upscaler.h  d3d11_post_processor.cpp  d3d11_post_processor.h  d3d11_variable_rate_shading.cpp  d3d11_variable_rate_shading.h
src/fsr/: fsr_easu.hlsl  fsr_rcas.hlsl
src/hooks/: hooks.cpp  hooks.h  oculus_hooks.cpp  oculus_hooks.h  openvr_hooks.cpp  openvr_hooks.h
src/nis/: NIS_Common.h  NIS_Config.h  NIS_Scaler.h  NIS_Sharpen.hlsl  NIS_Upscale.hlsl
src/oculus/: oculus_hooks.cpp  oculus_hooks.h  oculus_manager.cpp  oculus_manager.h
src/openvr/: openvr_hooks.cpp  openvr_hooks.h  openvr_manager.cpp  openvr_manager.h
src/proxy/: d3d11.cpp  dxgi.cpp  openvr.cpp  proxy_helpers.cpp  proxy_helpers.h
src/upscaling/: upscaling_mod.cpp  upscaling_mod.h
